fix(dashboard): better performances graph with ticks not overflowing

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -1,5 +1,9 @@
 .layout {
   position: relative;
   min-height: 100vh;
-  //   overflow: hidden;
+}
+
+.page-wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
 }
