--- a/src/components/dashboard/Performances/performances.scss
+++ b/src/components/dashboard/Performances/performances.scss
@@ -2,11 +2,3 @@
   background-color: var(--graph-black-2);
   aspect-ratio: 1;
 }
-
-.recharts-polar-grid-angle line {
-  stroke: none;
-}
-
-.recharts-polar-angle-axis-tick-value tspan {
-  font-size: 0.75rem;
-}
