--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -36,9 +36,9 @@
   background-color: var(--lightgrey);
   border-radius: 0.3125rem;
   position: relative;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
 
-  &--activity {
-    grid-column: span 3;
-    padding: 1.5rem 2rem;
+  &:not(:first-child) {
+    width: 16.25rem;
   }
 }
